# program-authority-escrow

./: .pre-commit-config.yaml  Anchor.toml  README.md
.github/workflows/: pre-commit.yaml
programs/program-authority-escrow/: Cargo.toml
programs/program-authority-escrow/src/: lib.rs
programs/program-authority-escrow/src/tests/: mod.rs  simulator.rs  test.rs
programs/program-authority-timelock/: Cargo.toml
programs/program-authority-timelock/src/: lib.rs
programs/program-authority-timelock/src/tests/: mod.rs  simulator.rs  test.rs
scripts/: commit.ts  transfer.ts
tests/: program-authority-escrow.ts
