[package]
name = "program-authority-escrow"
version = "1.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program_authority_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"

[dev-dependencies]
solana-program-test = "=1.14.7"
solana-sdk = "=1.14.7"
tokio = "1.14.1"
bincode = "1.3.3"